--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Elements community</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
     <link rel="stylesheet" type='text/css' media='screen' href='fonts.css'>
@@ -12,8 +12,12 @@
 <body>
     <main>
         <div class="container">
-<!-- sss -->
-            <div class="item item_a">a</div>
+
+            <div class="item item_a">
+                <p>new delhi</p>
+                <span>06:20</span><span>AM</span>
+                <span>novemaber</span><span>10.2020 | wednesday</span>
+            </div>
             <div class="item item_b">b</div>
             <div class="item item_c">c</div>
             <div class="item item_d">d</div>
