--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
                     </div>
                 </div>
 
-                <div class="avatar__title">
-                    <p class="bold">neelesh chaudhary</p>
-                    <p class="medium">UI/UX designer</p>
-                </div>
                 <div class="avatar__description">
-                    <p class="bold">about</p>
+                    <p class="bold bold-name">neelesh chaudhary</p>
+                    <p class="medium">UI/UX designer</p>
+
+
+                    <p class="bold bold-dec">about</p>
                     <p class="normal">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt perspiciatis
                         sit
                         exercitationem, explicabo sapiente dicta odit porro sapiente</p>
@@ -64,14 +64,66 @@
 
             </div>
 
-            <div class="item item_c">c</div>
-            <div class="item item_d">d</div>
+            <div class="item item_c">
+                <img src="/assets/2661564 1.png" alt="">
+                <div class="learn">
+                    <p class="bold">Learn Microinteraction</p>
+                    <p class="medium">Monday Jan 20 , 2020</p>
+                    <p class="normal">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ornare pretium placerat
+                        ut platea. Purus
+                        blandit integer sagittis massa vel est hac.</p>
+                </div>
+                <div class="blog">
+                    <p class="bold">read full blog</p>
+                    <div class="btn medium">blog</div>
+                </div>
+            </div>
+
+            <div class="item item-d">
+                <div class="profile">
+                    <img class="profile-img" src="/assets/Avatar.svg" alt="">
+                    <p class="btn medium">pro</p>
+                </div>
+                <div class="profile-intro">
+                    <p class="bold">neelesh chaudhary</p>
+                    <p class="medium">UI / UX designer</p>
+                    <p class="normal">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt repellat quam
+                        quaerat natus </p>
+                </div>
+                <div class="social-icons">
+                    
+                    <span class="social-icon">
+                        <i class="fab fa-dribbble"></i>
+                    </span>
+                    <span class="social-icon">
+                        <i class="fab fa-instagram"></i>
+                    </span>
+                    <span class="social-icon">
+                        <i class="fab fa-twitter"></i>
+                    </span>
+                    <span class="social-icon">
+                        <i class="fab fa-linkedin-in"></i>
+                    </span>
+                    <span class="social-icon">
+                        <i class="fab fa-facebook-f"></i>
+                    </span>
+                    <span class="social-icon">
+                        <i class="fab fa-behance"></i>
+                    </span>
+                </div>
+                <div class="btn-pro">
+                    <div class="bold btn-secondary">message</div>
+                    <div class="bold btn__primary">connect</div>
+
+                </div>
+            </div>
+
             <div class="item item_e">e</div>
             <div class="item item_f">f</div>
 
             <div class="item item_g">
-                    <img src="/assets/Search Icon.png" alt="">
-                    <p class="medium">search</p>
+                <img src="/assets/Search Icon.png" alt="">
+                <p class="medium">search</p>
             </div>
             <div class="item item_h">h</div>
             <div class="item item_i">i</div>
