--- a/index.html
+++ b/index.html
@@ -57,8 +57,7 @@
 
 
                     <p class="bold bold-dec">about</p>
-                    <p class="normal">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt perspiciatis
-                        sit
+                    <p class="normal">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt
                         exercitationem, explicabo sapiente dicta odit porro sapiente</p>
                 </div>
 
@@ -91,7 +90,7 @@
                         quaerat natus </p>
                 </div>
                 <div class="social-icons">
-                    
+
                     <span class="social-icon">
                         <i class="fab fa-dribbble"></i>
                     </span>
@@ -118,7 +117,57 @@
                 </div>
             </div>
 
-            <div class="item item_e">e</div>
+            <div class="item item_e">
+                <div class="calendar">
+                    <p class="bold calendar-c">calendar</p>
+                    <p class="bold calendar-month">jan 2020</p>
+                </div>
+                <div class="calendar-days">
+                    <span class="day num-day">s</span>
+                    <span class="day num-day">m</span>
+                    <span class="day num-day">t</span>
+                    <span class="day num-day">w</span>
+                    <span class="day num-day">t</span>
+                    <span class="day num-day">f</span>
+                    <span class="day num-day">s</span>
+                    <span class="day number-light">27</span>
+                    <span class="day number-light">28</span>
+                    <span class="day number-light">29</span>
+                    <span class="day number-light">30</span>
+                    <span class="day number-light">1</span>
+                    <span class="day number">2</span>
+                    <span class="day number">3</span>
+                    <span class="day number">4</span>
+                    <span class="day number">5</span>
+                    <span class="day number">6</span>
+                    <span class="day number">7</span>
+                    <span class="day number">8</span>
+                    <span class="day number">9</span>
+                    <span class="day number">10</span>
+                    <span class="day number">11</span>
+                    <span class="day number">12</span>
+                    <span class="day number">13</span>
+                    <span class="day number">14</span>
+                    <span class="day number">15</span>
+                    <span class="day number">16</span>
+                    <span class="day number">17</span>
+                    <span class="day number">18</span>
+                    <span class="day number">19</span>
+                    <span class="day number">20</span>
+                    <span class="day number">21</span>
+                    <span class="day number">22</span>
+                    <span class="day number">23</span>
+                    <span class="day number">24</span>
+                    <span class="day number">25</span>
+                    <span class="day number">26</span>
+                    <span class="day number">27</span>
+                    <span class="day number">28</span>
+                    <span class="day number">28</span>
+                    <span class="day number">30</span>
+                    <span class="day number">31</span>
+                </div>
+            </div>
+
             <div class="item item_f">f</div>
 
             <div class="item item_g">
