--- a/index.html
+++ b/index.html
@@ -139,23 +139,35 @@
                     <span class="day number">3</span>
                     <span class="day number">4</span>
                     <span class="day number">5</span>
-                    <span class="day number">6</span>
+                    <span class="day number active-light">6</span>
                     <span class="day number">7</span>
-                    <span class="day number">8</span>
+                    <span class="day number active">8</span>
                     <span class="day number">9</span>
                     <span class="day number">10</span>
                     <span class="day number">11</span>
                     <span class="day number">12</span>
                     <span class="day number">13</span>
                     <span class="day number">14</span>
-                    <span class="day number">15</span>
+                    <span class="day number event">15
+                        <div class="dats">
+                            <div class="dat dat__red"></div>
+                            <div class="dat dat__yellow"></div>
+                            <div class="dat dat__blue"></div>
+                        </div>
+                    </span>
                     <span class="day number">16</span>
                     <span class="day number">17</span>
                     <span class="day number">18</span>
                     <span class="day number">19</span>
                     <span class="day number">20</span>
                     <span class="day number">21</span>
-                    <span class="day number">22</span>
+                    <span class="day number event">22
+                        <div class="dats">
+                            <div class="dat dat__red"></div>
+                            <div class="dat dat__yellow"></div>
+                            <div class="dat dat__blue"></div>
+                        </div>
+                    </span>
                     <span class="day number">23</span>
                     <span class="day number">24</span>
                     <span class="day number">25</span>
