box download done

--- a/index.html
+++ b/index.html
@@ -180,7 +180,20 @@
                 </div>
             </div>
 
-            <div class="item item_f">f</div>
+            <div class="item item_f">
+              <div class="dl-file">
+               <div class="download">
+                <img src="/assets/Cloud Download Icon.png" alt="">
+                <div class="dl-des">
+                    <span class="des__downloading">downloading file</span>
+                    <span class="des__Percent">75%</span>
+                    <span class="des__remain">10 min remaining</span>
+                </div>
+               </div>
+              
+              </div>
+              <div class="dl-empty"></div>
+            </div>
 
             <div class="item item_g">
                 <img src="/assets/Search Icon.png" alt="">
