box expertise done

--- a/index.html
+++ b/index.html
@@ -181,25 +181,41 @@
             </div>
 
             <div class="item item_f">
-              <div class="dl-file">
-               <div class="download">
-                <img src="/assets/Cloud Download Icon.png" alt="">
-                <div class="dl-des">
-                    <span class="des__downloading">downloading file</span>
-                    <span class="des__Percent">75%</span>
-                    <span class="des__remain">10 min remaining</span>
+                <div class="dl-file">
+                    <div class="download">
+                        <img src="/assets/Cloud Download Icon.png" alt="">
+                        <div class="dl-des">
+                            <span class="des__downloading">downloading file</span>
+                            <span class="des__Percent">75%</span>
+                            <span class="des__remain">10 min remaining</span>
+                        </div>
+                    </div>
+
                 </div>
-               </div>
-              
-              </div>
-              <div class="dl-empty"></div>
+                <div class="dl-empty"></div>
             </div>
 
             <div class="item item_g">
                 <img src="/assets/Search Icon.png" alt="">
                 <p class="medium">search</p>
             </div>
-            <div class="item item_h">h</div>
+            <div class="item item_h">
+                <div class="expertise">
+                    <p class="bold">expertise</p>
+                    <ui class="e-items">
+                        <li class="e-item medium"><span class="ellipse"><i class="fas fa-circle" style="color: #567DF4;"></i></span>UI design</li>
+                        <li class="e-item medium"><span class="ellipse"><i class="fas fa-circle" style="color: #22215B;"></i></span>UX research</li>
+                        <li class="e-item medium"><span class="ellipse"><i class="fas fa-circle" style="color: #FFC700;"></i></span>design interaction</li>
+                        <li class="e-item medium"><span class="ellipse"><i class="fas fa-circle" style="color: #4CE364;"></i></span>wireframing</li>
+                    </ui>
+                </div>
+                <div class="ratio"><span class="radio-percent one bold">35%</span>
+                    <span class="radio-percent two bold">35%</span>
+                    <span class="radio-percent three bold">15%</span>
+                    <span class="radio-percent four bold">15%</span>
+                </div>
+                
+            </div>
             <div class="item item_i">i</div>
             <div class="item item_j">j</div>
 
